# FreeSurround

./: .clang-format  .gitignore  CMakeLists.txt
boost_1_86_0/bin.v2/: project-cache.jam
boost_1_86_0/bin.v2/standalone/msvc/msvc-14.3/: msvc-setup.bat
boost_1_86_0/libs/mysql/tools/docker/: build-docs.dockerfile
boost_1_86_0/libs/url/doc/: package-lock.json  package.json
boost_1_86_0/stage/lib/cmake/boost_contract-1.86.0/: boost_contract-config.cmake
boost_1_86_0/stage/lib/cmake/boost_filesystem-1.86.0/: boost_filesystem-config.cmake
boost_1_86_0/stage/lib/cmake/boost_headers-1.86.0/: boost_headers-config.cmake
boost_1_86_0/stage/lib/cmake/boost_iostreams-1.86.0/: boost_iostreams-config.cmake
boost_1_86_0/stage/lib/cmake/boost_math_c99-1.86.0/: boost_math_c99-config.cmake
boost_1_86_0/stage/lib/cmake/boost_nowide-1.86.0/: boost_nowide-config.cmake
boost_1_86_0/stage/lib/cmake/boost_stacktrace_from_exception-1.86.0/: boost_stacktrace_from_exception-config.cmake
boost_1_86_0/stage/lib/cmake/boost_stacktrace_noop-1.86.0/: boost_stacktrace_noop-config.cmake
boost_1_86_0/stage/lib/cmake/boost_stacktrace_windbg_cached-1.86.0/: boost_stacktrace_windbg_cached-config.cmake
boost_1_86_0/stage/lib/cmake/boost_system-1.86.0/: boost_system-config.cmake
boost_1_86_0/stage/lib/cmake/boost_thread-1.86.0/: boost_thread-config.cmake
include/FreeSurround/: ChannelMaps.h  FreeSurroundDecoder.h  KissFFT.h  KissFFTR.h  _KissFFTGuts.h
source/: ChannelMaps.cpp  FreeSurroundDecoder.cpp  KissFFT.cpp  KissFFTR.cpp
(+2 files in other folders)
